--- a/client/src/pages/notice/notice.html
+++ b/client/src/pages/notice/notice.html
@@ -6,9 +6,9 @@
     <title>공지사항</title>
     <link rel="stylesheet" href="Notice.css">
 </head>
-<body>
+<body class="noticebody">
     <div class="container">
-        <h1>공지사항</h1>
+        <h1 class="notice">공지사항</h1>
         <table class="notice-table">
             <thead>
                 <tr>
